Updates - updates list of sponsors on all pages - creates styles for footnotes and adds footnotes

--- a/approfon­dissement.html
+++ b/approfon­dissement.html
@@ -660,6 +660,11 @@
         </h2>
         <ul class="list list--flex list--center">
           <li>
+            <a target="_blank" href="https://www.aptn.ca/francais/">
+              <img src="assets/exports/aptn.png" alt="APTN" />
+            </a>
+          </li>
+          <li>
             <img src="assets/exports/bellmedia.png" alt="Bell Media" />
           </li>
           <li>
