--- a/fr.html
+++ b/fr.html
@@ -131,7 +131,7 @@
                 <p class="text-align-right">
                   <span class="text-break text-yellow"><strong>Vérifiez...</strong></span>
                   <span class="text-break">Vérifiez qu’elle provient</span>
-                  <span class="text-break">d’une source fiable.</span>
+                  <span class="text-break"><a aria-describedby="footnote-1" class="link--footnote" href="#footnote-1">d’une source fiable</a>.</span>
                 </p>
                 <img id="image-purple-arrow" src="assets/exports/purple-arrow.png" alt="" />
               </li>
@@ -160,6 +160,27 @@
                 </p>
               </li>
             </ol>
+
+            <div id="trusted-expert" class="footnote">
+              <h2 id="footnotes" class="footnote-title">Footnotes</h2>
+              <ol class="footnote-list">
+                <li id="footnote-1" class="footnote-list__item">
+                  <p>
+                    Une <stong>source fiable</stong> possède de solides antécédents et dispose
+                    d’un processus clair pour étayer les faits qu’elle présente,
+                    comme une organisation médiatique réputée.
+                  </p>
+                  <p>
+                    Une <strong>source spécialisée</strong>, comme un scientifique reconnu ou un
+                    spécialiste en santé, connaît ce sujet en particulier. Le
+                    fait qu’une personne se spécialise dans un domaine en
+                    particulier ne fait pas d’elle une spécialiste en tout.
+                    Demanderiez-vous à un psychiatre de vous refaire un
+                    plombage?
+                  </p>
+                </li>
+              </ol>
+            </div>
           </div>
       </div>
       <!-- /check first share after -->
@@ -735,7 +756,7 @@
         </h2>
         <ul class="list list--flex list--center">
           <li>
-            <a target="_blank" href="https://www.aptn.ca/">
+            <a target="_blank" href="https://www.aptn.ca/francais/">
               <img src="assets/exports/aptn.png" alt="APTN" />
             </a>
           </li>
