--- a/deepdive.html
+++ b/deepdive.html
@@ -595,16 +595,29 @@
         </h2>
         <ul class="list list--flex list--center">
           <li>
-            <img src="assets/exports/bellmedia.png" alt="Bell Media" />
+            <a target="_blank" href="https://www.aptn.ca/">
+              <img src="assets/exports/aptn.png" alt="APTN" />
+            </a>
           </li>
           <li>
-            <img src="assets/exports/corus.png" alt="corus" />
+            <a target="_blank" href="https://www.bellmedia.ca/">
+              <img src="assets/exports/bellmedia.png" alt="Bell Media" />
+            </a>
           </li>
           <li>
-            <img src="assets/exports/facebook.png" alt="Facebook" />
+            <a target="_blank" href="https://www.corusent.com/">
+              <img src="assets/exports/corus.png" alt="corus" />
+            </a>
           </li>
           <li>
-            <img src="assets/exports/canada-logo.png" alt="Funded by the Government of Canada" />
+            <a target="_blank" href="http://www.facebook.com/">
+              <img src="assets/exports/facebook.png" alt="Facebook" />
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="https://www.canada.ca/en.html">
+              <img src="assets/exports/canada-logo.png" alt="Funded by the Government of Canada" />
+            </a>
           </li>
         </ul>
       </div>
