--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
                 <p class="text-align-right">
                   <span class="text-break text-yellow"><strong>Check</strong></span>
                   <span class="text-break">that it came from a</span>
-                  <span class="text-break">trusted expert source.</span>
+                  <span class="text-break">
+                    <a aria-describedby="footnote-1" class="link--footnote" href="#footnote-1">
+                      trusted expert source
+                    </a>.
+                  </span>
                 </p>
                 <img id="image-purple-arrow" src="assets/exports/purple-arrow.png" alt="" />
               </li>
@@ -154,6 +158,26 @@
                 </p>
               </li>
             </ol>
+
+            <div id="trusted-expert" class="footnote">
+              <h2 id="footnotes" class="footnote-title">Footnotes</h2>
+              <ol class="footnote-list">
+                <li id="footnote-1" class="footnote-list__item">
+                  <p>
+                    A <strong>trusted source</strong> has a good track record and a clear
+                    process for getting facts right, like a reputable news
+                    organization.
+                  </p>
+                  <p>
+                    An <strong>expert source</strong>, like a recognized scientist or
+                    health expert, has knowledge of that **speciﬁc** topic.
+                    Being an expert in one area doesn’t make someone an
+                    expert in everything. Would you ask a psychiatrist to
+                    replace a filling?
+                  </p>
+                </li>
+              </ol>
+            </div>
           </div>
       </div>
       <!-- /check first share after -->
