Updates: completes responsive on index page

--- a/fr.html
+++ b/fr.html
@@ -558,7 +558,7 @@
       component--section
       component--section-flex
         ">
-        <div class="component__block" style="z-index: 100;">
+        <div class="component__block">
           <h2 class="h2">
             Ressources utiles
           </h2>
@@ -688,7 +688,7 @@
                     </h2>
                     <h3 class="sub-title">
                       <span class="text-break">Voulez-vous en savoir plus sur la
-                      mésinformation et la COVID-19? <a class="link" href="approfon­dissement.html">Faites une recherche plus approfondie ici.</a></span>
+                      mésinformation et la COVID-19? <a class="link" href="approfondissement.html">Faites une recherche plus approfondie ici.</a></span>
                     </h3>
                   </div>
                 </div>
