--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
       component--section
       component--section-flex
         ">
-        <div class="component__block" style="z-index: 100;">
+        <div class="component__block">
           <h2 class="h2">
             Helpful Resources
           </h2>
