completes pass on responsive styles

--- a/deepdive.html
+++ b/deepdive.html
@@ -93,7 +93,7 @@
           <div id="deep-dive-content" class="component__block">
             <div class="deep-dive__section-content">
               <h3 class="h3">
-                We’re proud to partner with Timothy Caulﬁeld and the
+                We’re proud to partner with Timothy Caulfield and the
                 University of Alberta’s Health and Law Institute to
                 provide these additional resources.
               </h3>
