Updates english responsive styles and fixes type size issues.

--- a/fr.html
+++ b/fr.html
@@ -573,38 +573,40 @@
               </label>
               <div id="popup-what-can-i-do" class="popup__container">
                 <div id="popup-what-can-i-do__pt-1" class="component__block">
-                  <div class="component__block component__block--left">
-                    <h2 class="h2">
-                      <span class="text-break">Je veux</span>
-                      <span class="text-break">aider. Que</span>
-                      <span class="text-break">puis-je faire?</span>
-                    </h2>
-                    <p>
-                      Les chercheurs ont découvert que de réduire les fausses
-                      informations de seulement 10% pendant une pandémie a un
-                      impact considérable sur la gravité de l’épidémie.
-                    </p>
+                  <div class="wrapper">
+                    <div class="component__block component__block--left">
+                      <h2 class="h2">
+                        <span class="text-break">Je veux</span>
+                        <span class="text-break">aider. Que</span>
+                        <span class="text-break">puis-je faire?</span>
+                      </h2>
+                      <p>
+                        Les chercheurs ont découvert que de réduire les fausses
+                        informations de seulement 10% pendant une pandémie a un
+                        impact considérable sur la gravité de l’épidémie.
+                      </p>
+                    </div>
+                    <div class="component__block component__block--right">
+                      <h3 class="h3">
+                        Vous pouvez faire une réelle différence.
+                      </h3>
+                      <ol>
+                        <li>
+                          <span class="text-break">Partagez de façon responsable.
+                          Vérifiez avant de partager.</span>
+                        </li>
+                        <li>
+                          <span class="text-break">Dénoncez les faux contenus
+                          lorsque vous en voyez.</span>
+                        </li>
+                        <li>
+                          <span class="text-break">Aidez-nous à informer le plus
+                          de personnes possible des dangers de la
+                          désinformation.</span>
+                        </li>
+                      </ol>
+                    </div>
                   </div>
-                  <div class="component__block component__block--right">
-                    <h3 class="h3">
-                      Vous pouvez faire une réelle différence.
-                    </h3>
-                    <ol>
-                      <li>
-                        <span class="text-break">Partagez de façon responsable.
-                        Vérifiez avant de partager.</span>
-                      </li>
-                      <li>
-                        <span class="text-break">Dénoncez les faux contenus
-                        lorsque vous en voyez.</span>
-                      </li>
-                      <li>
-                        <span class="text-break">Aidez-nous à informer le plus
-                        de personnes possible des dangers de la
-                        désinformation.</span>
-                      </li>
-                    </ol>
-                  </div>'
                 </div>
 
                 <div id="popup-what-can-i-do__pt-2" class="component__block">
@@ -637,15 +639,15 @@
               <img class="popup__image" src="assets/exports/search-engine.png" alt="" />
               <input id="search-engine" class="popup__toggle invisible" type="checkbox" />
               <label for="search-engine" class="popup__toggle-label text-align-center">
-                <span class="text-break section__line-one">J’ai besoin d’un moteur de recherche qui offre</span>
-                <span class="text-break section__line-two">des ressources.</span>
+                <span class="text-break section__line-one">Je veux trouver des informations de santé justes.</span>
+                <span class="text-break section__line-two">informations de santé justes.</span>
                 <span class="popup__icon popup__icon--bg-white"></span>
               </label>
               <div id="popup-search-engine" class="popup__container">
                 <div class="component__block">
                   <h2 class="h2">
-                    <span class="text-break">J’ai besoin d’un moteur de recherche</span>
-                    <span class="text-break">qui offre des ressources.</span>
+                    <span class="text-break">Je veux trouver des informations de santé justes.</span>
+                    <span class="text-break">informations de santé justes.</span>
                   </h2>
                   <h3 class="h3">
                     <span class="text-break">Étouffez le bruit des fausses informations. </span>
@@ -654,10 +656,12 @@
                   <p>
                     Les moteurs de recherche sont très efficaces pour trouver
                     une multitude d’informations, mais ils ne vérifient
-                    définitivement pas toutes les sources. Alors, nous l’avons
-                    fait pour vous! Ce moteur de recherche limite ses résultats
-                    aux sources spécialisées fiables. Utilisez-le pour trouver
-                    du contenu fiable.
+                    définitivement pas toutes les sources.
+                  </p>
+                  <p>
+                    Cette recherche personnalisée se limite aux sources
+                    nationales et provinciales de santé publique et vous y
+                    trouverez facilement des infos justes sur la COVID-19.
                   </p>
 
                   <ul id="search-list" class="list list--flex">
@@ -704,11 +708,6 @@
               </a>
             </li>
             <li class="menu__item">
-              <a href="about.html#campaign-partners" class="link menu__item__link">
-                Partenaires de campagne
-              </a>
-            </li>
-            <li class="menu__item">
               <a href="http://www.breakthefake.ca" class="link menu__item__link">
                 <img class="break-fake-logo" src="assets/exports/break-fake-logo.png" alt="Break the Fake" />
               </a>
@@ -716,7 +715,7 @@
             <li class="menu__item">
               <input id="other-resources" class="toggle-menu invisible" name="Other resources" type="checkbox">
               <label class="toggle-menu__label menu__item__link" for="other-resources">
-                <span>
+                <span class="toggle__lable__text">
                   Autres ressources
                 </span>
               </label>
