--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
           </h1>
           <h2 class="h2">
             <span class="text-break">But there is something you</span>
-            <span class="text-break">can do. Stop the spread</span>
-            <span class="text-break">of misinformation.</span>
+            <span class="text-break">can do. <strong>Stop the spread</strong></span>
+            <span class="text-break"><strong>of misinformation.</strong></span>
           </h2>
         </div>
         <div id='section-intro-2' class="component__block">
@@ -170,7 +170,7 @@
                   </p>
                   <p>
                     An <strong>expert source</strong>, like a recognized scientist or
-                    health expert, has knowledge of that **speciﬁc** topic.
+                    health expert, has knowledge of that **specific** topic.
                     Being an expert in one area doesn’t make someone an
                     expert in everything. Would you ask a psychiatrist to
                     replace a filling?
@@ -227,8 +227,9 @@
       <!-- passing bad info -->
       <div id="section-bad-info" class="component component--section">
         <h2 class="h2 text-align-center">
-          <span class="text-break">Passing along bad information is like</span>
-          <span class="text-break">passing along the virus itself.</span>
+          <span class="text-break">Passing along bad</span>
+          <span class="text-break">information is like passing</span>
+          <span class="text-break">along the virus itself.</span>
         </h2>
 
         <ul class="accordian-list">
@@ -548,38 +549,40 @@
               </label>
               <div id="popup-what-can-i-do" class="popup__container">
                 <div id="popup-what-can-i-do__pt-1" class="component__block">
-                  <div class="component__block component__block--left">
-                    <h2 class="h2">
-                      <span class="text-break">I want to</span>
-                      <span class="text-break">help. What</span>
-                      <span class="text-break">can I do?</span>
-                    </h2>
-                    <p>
-                      Researchers found that during a pandemic reducing bad
-                      information by just 10% has a signiﬁcant impact on how severe
-                      the pandemic is.
-                    </p>
+                  <div class="wrapper">
+                    <div class="component__block component__block--left">
+                      <h2 class="h2">
+                        <span class="text-break">I want to</span>
+                        <span class="text-break">help. What</span>
+                        <span class="text-break">can I do?</span>
+                      </h2>
+                      <p>
+                        Researchers found that during a pandemic reducing bad
+                        information by just 10% has a significant impact on how severe
+                        the pandemic is.
+                      </p>
+                    </div>
+                    <div class="component__block component__block--right">
+                      <h3 class="h3">
+                        You can make a real difference:
+                      </h3>
+                      <ol>
+                        <li>
+                          <span class="text-break">Share responsibly.</span>
+                          <span class="text-break">Check first, share after.</span>
+                        </li>
+                        <li>
+                          <span class="text-break">Call out false content</span>
+                          <span class="text-break">when you see it.</span>
+                        </li>
+                        <li>
+                          <span class="text-break">Help us educate as many</span>
+                          <span class="text-break">people as possible about the</span>
+                          <span class="text-break">dangers of misinformation.</span>
+                        </li>
+                      </ol>
+                    </div>'
                   </div>
-                  <div class="component__block component__block--right">
-                    <h3 class="h3">
-                      You can make a real difference:
-                    </h3>
-                    <ol>
-                      <li>
-                        <span class="text-break">Share responsibly.</span>
-                        <span class="text-break">Check ﬁrst, share after.</span>
-                      </li>
-                      <li>
-                        <span class="text-break">Call out false content</span>
-                        <span class="text-break">when you see it.</span>
-                      </li>
-                      <li>
-                        <span class="text-break">Help us educate as many</span>
-                        <span class="text-break">people as possible about the</span>
-                        <span class="text-break">dangers of misinformation.</span>
-                      </li>
-                    </ol>
-                  </div>'
                 </div>
 
                 <div id="popup-what-can-i-do__pt-2" class="component__block">
@@ -610,24 +613,27 @@
               <img class="popup__image" src="assets/exports/search-engine.png" alt="" />
               <input id="search-engine" class="popup__toggle invisible" type="checkbox" />
               <label for="search-engine" class="popup__toggle-label text-align-center">
-                <span class="text-break section__line-one">I need a search engine</span>
-                <span class="text-break section__line-two">with resources</span>
+                <span class="text-break section__line-one">I want to search for</span>
+                <span class="text-break section__line-two">trusted health info.</span>
                 <span class="popup__icon popup__icon--bg-white"></span>
               </label>
               <div id="popup-search-engine" class="popup__container">
                 <div class="component__block">
                   <h2 class="h2">
-                    <span class="text-break">I need a search engine</span>
-                    <span class="text-break">with resources.</span>
+                    <span class="text-break">I want to search for</span>
+                    <span class="text-break">trusted health info.</span>
                   </h2>
                   <h3 class="h3">
                     Cut through the noise. Get just the good stuff.
                   </h3>
                   <p>
-                    Search engines are wonderful at ﬁnding a ton information but
-                    they definitely don’t fact check every source. So, we did it
-                    for you! This search engine limits its ﬁndings to trusted
-                    expert sources. Use it to ﬁnd trusted content.
+                    Search engines are wonderful at finding a ton information but
+                    they definitely don’t fact check every source.
+                  </p>
+                  <p>
+                    This custom search engine limits its findings to national and
+                    provincial public health sources so you can find accurate
+                    info about COVID-19 easily.
                   </p>
 
                   <ul id="search-list" class="list list--flex">
@@ -648,7 +654,7 @@
               <input id="deep-dive" class="popup__toggle invisible" type="checkbox" />
               <label for="deep-dive" class="popup__toggle-label text-align-center">
                 <span class="text-break section__line-one">I want to do a</span>
-                <span class="text-break section__line-two">deep dive</span>
+                <span class="text-break section__line-two">deep dive.</span>
                 <span class="popup__icon popup__icon--bg-white"></span>
               </label>
               <div id="popup-deep-dive" class="popup__container">
@@ -677,11 +683,6 @@
               </a>
             </li>
             <li class="menu__item">
-              <a href="about.html#campaign-partners" target="_blank" class="link menu__item__link">
-                Campaign Partners
-              </a>
-            </li>
-            <li class="menu__item">
               <a href="http://www.breakthefake.ca" target="_blank" class="link menu__item__link">
                 <img class="break-fake-logo" src="assets/exports/break-fake-logo.png" alt="Break the Fake" />
               </a>
@@ -689,29 +690,37 @@
             <li class="menu__item">
               <input id="other-resources" target="_blank" class="toggle-menu invisible" name="Other resources" type="checkbox">
               <label class="toggle-menu__label menu__item__link" for="other-resources">
-                <span>
+                <span class="toggle__lable__text">
                   Other Resources
                 </span>
               </label>
               <ul class="toggle-menu__content">
                 <li>
                   <a class="link" target="_blank" href="https://mediasmarts.ca/digital-media-literacy/e-tutorials/break-fake-how-tell-what%E2%80%99s-true-online">
-                    Break the Fake <strong>workshop</strong>
+                    <span>
+                      Break the Fake <strong>workshop</strong>
+                    </span>
                   </a>
                 </li>
                 <li>
                   <a class="link" target="_blank" href="https://mediasmarts.ca/search/break%20the%20fake?f%5B0%5D=type%3Alesson_plan">
-                    Break the Fake <strong>lesson plans</strong>
+                    <span>
+                      Break the Fake <strong>lesson plans</strong>
+                    </span>
                   </a>
                 </li>
                 <li>
                   <a class="link" target="_blank" href="https://mediasmarts.ca/teacher-resources/break-fake-how-tell-whats-true-online">
-                    Break the Fake <strong>fact-checking tips</strong>
+                    <span>
+                      Break the Fake <strong>fact-checking tips</strong>
+                    </span>
                   </a>
                 </li>
                 <li>
                   <a class="link" target="_blank" href="https://mediasmarts.ca/break-fake-printable-posters-bookmarks">
-                    Break the Fake <strong>posters and bookmarks</strong>
+                    <span>
+                      Break the Fake <strong>posters and bookmarks</strong>
+                    </span>
                   </a>
                 </li>
               </ul>
