updates to main page responsive design.

--- a/fr.html
+++ b/fr.html
@@ -558,7 +558,7 @@
       component--section
       component--section-flex
         ">
-        <div class="component__block">
+        <div class="component__block layer--navigation">
           <h2 class="h2">
             Ressources utiles
           </h2>
