--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
       component--section
       component--section-flex
         ">
-        <div class="component__block">
+        <div class="component__block layer--navigation">
           <h2 class="h2">
             Helpful Resources
           </h2>
@@ -687,7 +687,7 @@
                 <img class="break-fake-logo" src="assets/exports/break-fake-logo.png" alt="Break the Fake" />
               </a>
             </li>
-            <li class="menu__item">
+            <li class="menu__item menu__item--higher-layer">
               <input id="other-resources" target="_blank" class="toggle-menu invisible" name="Other resources" type="checkbox">
               <label class="toggle-menu__label menu__item__link" for="other-resources">
                 <span class="toggle__lable__text">
