Completes fine tuning. Adds twiter

--- a/about.html
+++ b/about.html
@@ -175,6 +175,11 @@
             </a>
           </li>
           <li>
+            <a target="_blank" href="http://www.twitter.com/">
+              <img src="assets/exports/twitter.png" alt="twitter" />
+            </a>
+          </li>
+          <li>
             <a target="_blank" href="http://www.facebook.com/">
               <img src="assets/exports/facebook.png" alt="Facebook" />
             </a>
