--- a/approfondissement.html
+++ b/approfondissement.html
@@ -671,6 +671,11 @@
             <img src="assets/exports/corus.png" alt="corus" />
           </li>
           <li>
+            <a target="_blank" href="http://www.twitter.com/">
+              <img src="assets/exports/twitter.png" alt="twitter" />
+            </a>
+          </li>
+          <li>
             <img src="assets/exports/facebook.png" alt="Facebook" />
           </li>
           <li>
