--- a/deepdive.html
+++ b/deepdive.html
@@ -479,6 +479,21 @@
                       people it’s wrong.”
                     </p>
                   </dd>
+                  <dt class="text-blue-light">
+                    <a class="link" target="_blank" href="https://osf.io/5uy2f/">
+                      “Does Debunking Work? Correcting COVID-19 Misinformation
+                      on Social” Timothy Caulfield, OSF Preprints, May 25, 2020.” 
+                    </a>
+                  </dt>
+                  <dd>
+                    <p>
+                      “While the data remains complex and, at times,
+                      contradictory, there is little doubt that efforts to
+                      correct misinformation are worthwhile. In fact, fighting
+                      the spread of misinformation should be viewed as vitally
+                      important health and science policy priority.”
+                    </p>
+                  </dd>
                 </dl>
 
                 <hr />
@@ -612,6 +627,11 @@
           <li>
             <a target="_blank" href="http://www.facebook.com/">
               <img src="assets/exports/facebook.png" alt="Facebook" />
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="http://www.twitter.com/">
+              <img src="assets/exports/twitter.png" alt="twitter" />
             </a>
           </li>
           <li>
