--- a/fr.html
+++ b/fr.html
@@ -770,6 +770,11 @@
             </a>
           </li>
           <li>
+            <a target="_blank" href="http://www.twitter.com/">
+              <img src="assets/exports/twitter.png" alt="twitter" />
+            </a>
+          </li>
+          <li>
             <a href="http://www.facebook.com/">
               <img src="assets/exports/facebook.png" alt="Facebook" />
             </a>
