--- a/index.html
+++ b/index.html
@@ -758,6 +758,11 @@
             </a>
           </li>
           <li>
+            <a target="_blank" href="http://www.twitter.com/">
+              <img src="assets/exports/twitter.png" alt="twitter" />
+            </a>
+          </li>
+          <li>
             <a target="_blank" href="https://www.canada.ca/en.html">
               <img src="assets/exports/canada-logo.png" alt="Funded by the Government of Canada" />
             </a>
