Adds styles and new content for footnotes.

--- a/index.html
+++ b/index.html
@@ -160,20 +160,21 @@
             </ol>
 
             <div id="trusted-expert" class="footnote">
-              <h2 id="footnotes" class="footnote-title">Footnotes</h2>
+              <h2 id="footnotes" class="footnote-title">
+                <span class="invisible">Footnotes:</span> What are Trusted and Expert Sources?
+              </h2>
               <ol class="footnote-list">
                 <li id="footnote-1" class="footnote-list__item">
                   <p>
-                    A <strong>trusted source</strong> has a good track record and a clear
-                    process for getting facts right, like a reputable news
-                    organization.
+                    A trusted source has a good track record and a clear process
+                    for getting facts right, like a reputable news organization.
                   </p>
                   <p>
-                    An <strong>expert source</strong>, like a recognized scientist or
-                    health expert, has knowledge of that **specific** topic.
-                    Being an expert in one area doesn’t make someone an
-                    expert in everything. Would you ask a psychiatrist to
-                    replace a filling?
+                    An expert source, like a recognized scientist or health
+                    expert, has knowledge of that specific topic. Being an
+                    expert in one area doesn’t make someone an expert
+                    ineverything. Would you ask a psychiatrist to replace a
+                    filling?
                   </p>
                 </li>
               </ol>
