Adds links to infographic and new link section in helpful resources.

--- a/index.html
+++ b/index.html
@@ -478,6 +478,9 @@
                           can help.
                         </p>
                       </li>
+                      <li>
+                        How should you respond to false info? Check out our <a class="text-white link" href="say-something/">helpful infographic</a> for tips and suggestions
+                      </li>
                     </ul>
                   </dd>
                 </dl>
@@ -673,6 +676,18 @@
                   </div>
                 </div>
               </div>
+            </li>
+            <li class="popup__item">
+              <a href="/say-something/" class="popup__link">
+                <img class="popup__image" src="assets/exports/respond-to-false-info.png" alt="" />
+                <span class="popup__togle"></span>
+                <span class="popup__toggle-label text-align-center">
+                  <span class="text-break section__line-one">I want to</span>
+                  <span class="text-break section__line-two">respond to</span>
+                  <span class="text-break section__line-two">false info.</span>
+                  <span class="popup__icon popup__icon--bg-white"></span>
+                </span>
+              </a>
             </li>
           </ul>
         </div>
