adds french translation to site.

--- a/fr.html
+++ b/fr.html
@@ -498,6 +498,12 @@
                           vraiment en faire partie? » peuvent faciliter les
                           choses.
                         </p>
+                        <p>
+                          Comment répondre à la fausse info? Voici une <a
+                          class="text-white link"
+                          href="say-something/fr.html">infographie avec des astuces et
+                          des suggestions</a>.
+                        </p>
                       </li>
                     </ul>
                   </dd>
@@ -639,8 +645,9 @@
               <img class="popup__image" src="assets/exports/search-engine.png" alt="" />
               <input id="search-engine" class="popup__toggle invisible" type="checkbox" />
               <label for="search-engine" class="popup__toggle-label text-align-center">
-                <span class="text-break section__line-one">Je veux trouver des informations de santé justes.</span>
-                <span class="text-break section__line-two">informations de santé justes.</span>
+                <span class="text-break section__line-one">Je veux trouver des</span>
+                <span class="text-break section__line-two">informations</span>
+                <span class="text-break section__line-two">de santé justes.</span>
                 <span class="popup__icon popup__icon--bg-white"></span>
               </label>
               <div id="popup-search-engine" class="popup__container">
@@ -697,6 +704,18 @@
                   </div>
                 </div>
               </div>
+            </li>
+            <li class="popup__item">
+              <a href="say-something/fr.html" class="popup__link">
+                <img class="popup__image" src="assets/exports/respond-to-false-info.png" alt="" />
+                <span class="popup__togle"></span>
+                <span class="popup__toggle-label text-align-center">
+                  <span class="text-break section__line-one">Je veux</span>
+                  <span class="text-break section__line-two">remédier la</span>
+                  <span class="text-break section__line-two">fausse info</span>
+                  <span class="popup__icon popup__icon--bg-white"></span>
+                </span>
+              </a>
             </li>
           </ul>
         </div>
