--- a/index.html
+++ b/index.html
@@ -479,7 +479,9 @@
                         </p>
                       </li>
                       <li>
-                        How should you respond to false info? Check out our <a class="text-white link" href="say-something/">helpful infographic</a> for tips and suggestions
+                        How should you respond to false info? Check out our <a
+                        class="text-white link" href="say-something/">helpful
+                        infographic</a> for tips and suggestions
                       </li>
                     </ul>
                   </dd>
